[package]
name = "ledger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv-async = "1.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-std]
version = "1.10"
features = ["attributes"]